<resources>
    <string name="app_name">Project News</string>
    <string name="app_id" translatable="false">ca-app-pub-7330887983553029~4271620333</string>
    <string name="banner_ad" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ad" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="stream_offline">Radio station is offline. Please try again later.</string>
    <string name="no_to_dos">Add new note \n&amp;\n Swipe Right to delete the item</string>
    <string name="title">What\'s on your mind?</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="remind_me">Remind Me</string>
    <string name="remove">Remove</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <plurals name="number_of_new_entries_for_noti">
        <item quantity="one">One New News is available to read</item>
        <item quantity="other">%d New News are available to read</item>
    </plurals>
    <plurals name="number_of_new_entries_for_notification">
        <item quantity="one">One New Feed is available to read</item>
        <item quantity="other">%d New Feeds are available to read</item>
    </plurals>
    <string name="deleted_todo">Sorry, the data is already deleted</string>
    <string name="screen_filter">Screen Filter</string>
    <string name="button_tip_text">Tip: Click the top left button to turn on Night Screen.</string>
    <string name="yellow_filter">Yellow filter</string>
    <string name="yellow_filter_explanation">Slide to the right to make the overlay yellow instead of grey</string>
    <string name="scheduler_status_on_show_enable_time">Automatically enable at %s.</string>
    <string name="scheduler_status_on_show_disable_time">It will be end at %s.</string>
    <string name="scheduler_status_off">OFF</string>
    <string name="dialog_choose_mode">Choose mode</string>
    <string name="mode_text_no_permission">No permission mode</string>
    <string name="mode_text_normal">Normal mode</string>
    <string name="mode_text_overlay_all">System overlay mode</string>
    <string name="mode_desc_no_permission">No permission is needed. However, the lockscreen, status bar and navigation bar are not dimmed. Note that this doesn\'t work in Android 7.0.</string>
    <string name="mode_desc_normal">Recommended mode. It is stable, although it cannot dim the navigation bar and it prevents users from clicking \"Install\" or \"Allow\" in permission dialogs.</string>
    <string name="mode_desc_overlay_all">Both the status bar and the navigation bar are dimmed. However, the screen may flash in some apps.</string>
    <string name="mode_android_oreo_explanation_dialog_title">Why can\'t I change the mode?</string>
    <string name="mode_android_oreo_explanation_dialog_message">Since Android Oreo (8.0), Android strictly limits the permissions of floating windows. The methods used before are no longer available. Maybe we will support better methods to control brightness in the future.</string>
    <string name="mode_android_oreo_explanation_read_more">Read more</string>
    <string name="mode_android_oreo_explanation_url" translatable="false">https://developer.android.com/about/versions/oreo/android-8.0-changes.html#all-aw</string>
    <string name="notification_channel_running_status">Running status</string>
    <string name="shortcut_label_switch">Toggle</string>
    <string name="mask_fail_to_start">Failed to start mask. Please check whether the system has denied the permissions.</string>
    <string name="dialog_first_run_title">First run</string>
    <string name="dialog_first_run_message">Can you see this message? If you can, Night Screen is working well.\nIt will automatically stop after 5 seconds if you don\'t press OK.</string>
    <string name="notification_running_title">Night Screen is enabled</string>
    <string name="notification_running_msg">Click here to open settings</string>
    <string name="notification_paused_title">Night Screen is paused</string>
    <string name="notification_paused_msg">Click here to open settings or Swipe to stop Night Screen</string>
    <string name="notification_action_turn_off">Pause</string>
    <string name="notification_action_turn_on">Resume</string>
    <string name="scheduler_title">Auto mode</string>
    <string name="dialog_ignore_battery_opt_title">Note</string>
    <string name="dialog_ignore_battery_opt_msg">Due to restrictions on apps introduced in Android 6.0, we may not be able to automatically (de-)activate Night Screen on time. \n\nA possible solution is to tell Android to ignore battery optimizations for Night Screen. To do so, tap \"Go to settings\" and confirm the dialog that follows.</string>
    <string name="dialog_button_go_to_set">Go to settings</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="colon" translatable="false">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <plurals name="number_of_new_news">
        <item quantity="one">One New News</item>
        <item quantity="other">%d New News</item>
    </plurals>
    <plurals name="number_of_new_entries">
        <item quantity="one">One New Entry</item>
        <item quantity="other">%d New Entries</item>
    </plurals>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="edit_feed_title">Edit feeds</string>
    <string name="new_feed_title">New feed</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_error">The feed website is unreachable.</string>
    <string name="error_feed_process">The feed can not be processed.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="error_feed_import">The selected file could not be imported.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card mounted.</string>
    <string name="error_external_storage_not_available">The external storage (e.g. SD-card) is not available.</string>
    <string name="feed_no_summary">\u003c No summary available. \u003e</string>
    <string name="feed_url">URL or Site name</string>
    <string name="optional">(optional)</string>
    <string name="feed_cookie">Authentication Cookie</string>
    <string name="cookiename">Name</string>
    <string name="cookievalue">Value</string>
    <string name="feed_httpAuth">HTTP Authentication</string>
    <string name="loginhttpAuth">Login</string>
    <string name="passwordhttpAuth">Password</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_filters_title">Filter</string>
    <string name="tab_advanced_title">Advanced</string>
    <string name="feed_title">Title</string>
    <string name="feed_filters">Filter rules</string>
    <string name="filter_add_title">Add rule</string>
    <string name="filter_delete_title">Delete rule</string>
    <string name="filter_help">Filter Help</string>
    <string name="filter_edit_title">Edit rule</string>
    <string name="filter_apply_to_title">Apply to title</string>
    <string name="filter_apply_to_content">Apply to content</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="feed_search">Feed search</string>
    <string name="select_file">Select file (SD-root)</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_filter">Do you really want to delete this filter?</string>
    <string name="add_group_title">Select group name</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">You can either put this feed into or above this group. What do you want to do?</string>
    <string name="to_group_above">Above the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="add_custom_feed">Custom feed</string>
    <string name="google_news_title">Google News topics</string>
    <string name="google_news_indicator">Select one or several topics to add. Some of them may not be provided by Google for your language.</string>
    <string name="google_news_top_stories">Top Stories</string>
    <string name="google_news_world">World</string>
    <string name="google_news_business">Business</string>
    <string name="google_news_technology">Technology</string>
    <string name="google_news_entertainment">Entertainment</string>
    <string name="google_news_sports">Sports</string>
    <string name="google_news_science">Science</string>
    <string name="google_news_health">Health</string>
    <string name="google_news_custom_topic">Enter custom topic</string>
    <string name="all">Entries</string>
    <string name="no_entries">List is empty,
        Please click refresh button</string>
    <string name="favorites">Starred</string>
    <string name="context_menu_show_read">Show All entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="copied_clipboard">Link copied</string>
    <string name="get_full_text">Retrieve the full text</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="news_settings_refresh_enabled_description">Enable the automatic refresh of Recent News</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="news_settings_refresh_on_open">Refresh News on open</string>
    <string name="news_settings_refresh_on_open_description">Refreshes Recent News after opening the application</string>
    <string name="developer_name" translatable="false">Sagar Dhakal</string>
    <string name="developer_career" translatable="false">Android Developer</string>
    <string name="freelancer" translatable="false">Tech Solutions</string>
    <string name="developer_address" translatable="false">Cherry Digital Services</string>
    <string name="licenses" translatable="false">Licenses</string>
    <string name="fork_on_github" translatable="false">Fork on Github</string>
    <string name="reader">RSS Feed Reader</string>
    <string name="radio">Radio</string>
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="social_media">Social Media</string>
    <string name="todo_amp_diary">Diary Reminder</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="exit">Exit</string>
    <string name="chooseLanguage">Language</string>
</resources>